Now finished the footer mobile, added the copyright text, and fixed the footer's menu alignment

--- a/store-theme-project-2/styles/css/vtex.flex-layout.css
+++ b/store-theme-project-2/styles/css/vtex.flex-layout.css
@@ -38,6 +38,28 @@
   gap: 11px;
 }
 
+/* Footer */
+.flexRow--footer1Row {
+  width: 908px;
+  margin: 0 auto;
+}
+
+.flexRowContent--footer1Row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flexRow--footer2RowDesk {
+  margin-top: 79px;
+
+  height: 61px;
+
+  display: flex;
+  align-items: center;
+
+  background: #f8f8f8;
+}
+
 /* Store theme default*/
 .flexRowContent--menu-link,
 .flexRowContent--main-header {
