--- a/store-theme-project-2/styles/css/vtex.menu.css
+++ b/store-theme-project-2/styles/css/vtex.menu.css
@@ -1,3 +1,7 @@
+.menuContainer--categorias {
+  width: 275px;
+}
+
 .menuItem--footerTitle {
   margin-bottom: 15px;
 }
