--- a/store-theme-project-2/styles/css/vtex.rich-text.css
+++ b/store-theme-project-2/styles/css/vtex.rich-text.css
@@ -1,3 +1,18 @@
+/* Footer */
+.wrapper--footer {
+  margin: 0 auto;
+  max-width: 1074px;
+}
+.paragraph--footer {
+  margin: 0;
+
+  text-align: center;
+
+  color: #828282;
+  font-size: 12px;
+  line-height: 17px;
+}
+
 .container--deals {
   color: #ffffff;
   text-align: center;
@@ -31,7 +46,7 @@
   max-width: 540px;
   margin: 0 16px;
   padding-top: 120px;
-  color: #03034E;
+  color: #03034e;
 }
 
 .container--question .strong {
@@ -45,7 +60,7 @@
   max-width: 540px;
   padding-top: 36px;
   padding-bottom: 84px;
-  color: #03034E;
+  color: #03034e;
 }
 
 .container--link .strong {
@@ -58,41 +73,41 @@
   text-decoration: none;
   font-size: 36px;
   font-weight: 300;
-  color: #03034E;
+  color: #03034e;
 }
 
 .container--title {
-  color: #03034E;
+  color: #03034e;
   font-size: 28px;
   font-weight: 700;
 }
-.container--text{
+.container--text {
   display: flex;
   justify-content: center;
   margin-bottom: 73px;
   margin-top: 73px;
 }
 
-.wrapper--text{
+.wrapper--text {
   width: 864px;
 }
-.wrapper--text-shelf{
+.wrapper--text-shelf {
   display: flex;
   width: 1900px;
   justify-content: center;
 }
 
-.paragraph--text{
+.paragraph--text {
   display: flex;
   text-align: center;
   width: 938px;
   color: #707070;
 }
 
-.paragraph--text-shelf{
+.paragraph--text-shelf {
   font-weight: bold;
   font-size: 35px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   margin-bottom: 57px;
   margin-top: 57px;
 }
@@ -107,7 +122,7 @@
   }
 
   .container--title {
-    color: #03034E;
+    color: #03034e;
     font-size: 40px;
     font-weight: 700;
     max-width: 60%;
