--- a/store-theme-project-2/styles/css/vtex.store-footer.css
+++ b/store-theme-project-2/styles/css/vtex.store-footer.css
@@ -1,8 +1,3 @@
-.footerLayout--footerLayoutDesk {
-  width: 908px;
-  margin: 0 auto;
-}
-
 .styledLinkContent--footerItem {
   text-decoration: none;
 
